Implement DECCOLM (132-column mode) via dynamic terminal width
Switches the terminal between 80 and 132 columns at runtime. The column
count lives in a new transient `width` field (defaults to WIDTH; ceres
runs the constructor on load, so it re-initializes consistently with the
re-allocated buffers). setWidth reallocates the width-dependent arrays,
clears the screen, resets margins, homes the cursor, and marks all rows
dirty — the DECCOLM spec reset.

The DECCOLM escape now drives the switch: CH2 (SM ?3h) calls setWidth(132),
CH3/RM (?3l) calls setWidth(80). DA2 already advertises the 132-column
capability in its Pc bitmask.

Reconciled onto the merged terminal PRs (#8/#10/#12/#14/#15): deccolm
predates them, so for the conflict files we keep the reviewed base versions
(DEFAULT_FOREGROUND reset, getDirtyRow-routed markDirty, the #14 clamp,
lowercase .copy()) and re-apply only the Terminal.WIDTH -> terminal.width
rename to per-row indexing/iteration sites (buffer ops, render loops, tab
loop, cursor visibility, tab clamp). Static allocation stays Terminal.WIDTH.

Completes two pieces lost in deccolm-rebased: the `width` field was
referenced but never declared, and `setWidth` was defined but never
called by anything. Fixed stale .Copy() -> .copy() in setWidth.

Added deccolmSwitchesColumnWidthAndClearsScreen covering the width switch,
buffer reallocation, whole-screen dirty, 132-char no-wrap, and row-1
stride; revert-and-fail spot-checked the putChar wrap and setChar index
renames.

Assisted by: GLM (syn:large:text on synthetic.new) — code generation and review.