@@ -47,6 +47,8 @@ public class Terminal {
 
     public int SCROLL_BACK_COUNT = 20;
     public transient ByteArrayFIFOQueue input = new ByteArrayFIFOQueue(32);
+    // DECCOLM dynamic width; setWidth reallocates buffers. Transient: re-inits to WIDTH on load.
+    public transient int width = WIDTH;
     public transient int[] buffer = new int[WIDTH * HEIGHT * SCROLL_BACK_COUNT];
     public transient ColorData[] colors = new ColorData[WIDTH * HEIGHT * SCROLL_BACK_COUNT];
     public transient ColorData[] colorsBackground = new ColorData[WIDTH * HEIGHT * SCROLL_BACK_COUNT];
@@ -133,11 +135,61 @@ public class Terminal {
     }
 
     public int getWidth() {
-        return WIDTH * CHAR_WIDTH;
+        return width * CHAR_WIDTH;
     }
 
     public int getHeight() {
         return HEIGHT * CHAR_HEIGHT;
+    }
+
+    public int getTerminalWidth() {
+        return width;
+    }
+
+    public void setWidth(final int newWidth) {
+        this.width = newWidth;
+
+        // Reallocate main buffer arrays
+        final int mainSize = newWidth * HEIGHT * SCROLL_BACK_COUNT;
+        this.buffer = new int[mainSize];
+        this.colors = new ColorData[mainSize];
+        this.colorsBackground = new ColorData[mainSize];
+        this.styles = new byte[mainSize];
+        java.util.Arrays.fill(this.buffer, ' ');
+        java.util.Arrays.fill(this.colors, TerminalColors.DEFAULT_FOREGROUND_COLOR.copy());
+        java.util.Arrays.fill(this.colorsBackground, TerminalColors.DEFAULT_BACKGROUND_COLOR.copy());
+        java.util.Arrays.fill(this.styles, TerminalColors.DEFAULT_STYLE);
+
+        // Reallocate alt buffer arrays
+        final int altSize = newWidth * HEIGHT;
+        this.altBuffer = new int[altSize];
+        this.altColors = new ColorData[altSize];
+        this.altColorsBackground = new ColorData[altSize];
+        this.altStyles = new byte[altSize];
+        java.util.Arrays.fill(this.altBuffer, ' ');
+        java.util.Arrays.fill(this.altColors, TerminalColors.DEFAULT_FOREGROUND_COLOR.copy());
+        java.util.Arrays.fill(this.altColorsBackground, TerminalColors.DEFAULT_BACKGROUND_COLOR.copy());
+        java.util.Arrays.fill(this.altStyles, TerminalColors.DEFAULT_STYLE);
+
+        // Reset tab stops
+        this.tabs = new boolean[newWidth];
+        this.altTabs = new boolean[newWidth];
+        for (int i = 1; i < newWidth; i++) {
+            if (i % TerminalColors.TAB_WIDTH == 0) {
+                this.tabs[i] = true;
+                this.altTabs[i] = true;
+            }
+        }
+
+        // DECCOLM spec: clear screen, reset margins, home cursor
+        this.scrollFirst = 0;
+        this.scrollLast = HEIGHT - 1;
+        this.lastRowToDisplay = HEIGHT;
+        this.lastRowToDisplayMax = HEIGHT;
+        this.setCursorPos(0, 0);
+
+        // Mark all rows dirty
+        this.renderers.forEach(model -> model.getDirtyMask().set(-1));
     }
 
     @OnlyIn(Dist.CLIENT)
@@ -146,13 +198,13 @@ public class Terminal {
     }
 
     public void setCursorPos(final int x, final int y) {
-        this.x = Math.max(0, Math.min(WIDTH - 1, x));
-        this.y = Math.max(0, Math.min(HEIGHT - 1, y));
+        this.x = Math.clamp(x, 0, width - 1);
+        this.y = Math.clamp(y, 0, HEIGHT - 1);
     }
 
     public void setClampedCursorPos(final int x, final int y) {
         if (this.y >= scrollFirst && this.y <= scrollLast) {
-            setCursorPos(x, Math.max(scrollFirst, Math.min(scrollLast, y)));
+            setCursorPos(x, Math.clamp(y, scrollFirst, scrollLast));
         } else {
             setCursorPos(x, y);
         }
