@@ -17,9 +17,9 @@ public class IL extends CSISequenceHandler {
         if (terminal.y < terminal.scrollFirst || terminal.y > terminal.scrollLast) return;
 
         boolean useAltBuffer = terminal.currentPrivateModeState.isAltBufferEnabled();
-        int lines = args[0];
+        int lines = (argCount < 1) ? 1 : Math.max(args[0], 1);
         int maxLines = terminal.scrollLast - terminal.y + 1;
-        lines = Math.min(lines, Math.max(0, maxLines));
+        lines = Math.clamp(lines, 0, Math.max(0, maxLines));
         if (lines == 0) return;
         if (useAltBuffer) {
             terminal.bufferManager.shiftLines(terminal.y, terminal.scrollLast - lines, lines);
